2006-06-28  Paul Eggert  <eggert@cs.ucla.edu>

	* jm-macros.m4 (jl_MACROS): Require 2.60, not 2.59d.
	* jm-macros.m4 (gl_CHECK_ALL_TYPES): Don't require AC_C_CONST, since
	it's obsolete.

2006-06-28  Derek Price  <derek@ximbiot.com>

	* fnmatch.m4 (_AC_LIBOBJ_FNMATCH): Don't require AC_C_CONST, since
	it's obsolete.
	* strftime.m4 (gl_FUNC_GNU_STRFTIME): Likewise.

2006-06-19  Paul Eggert  <eggert@cs.ucla.edu>

	* lib-ignore.m4 (gl_IGNORE_UNUSED_LIBRARIES): Prefer binutils's
	--as-needed option if available.  Problem reported by Albert Chin in
	<http://lists.gnu.org/archive/html/bug-gnulib/2006-06/msg00114.html>.
	However, use -Wl,--as-needed, not bare --as-needed, since HP-UX 11.11
	cc merely issues a bunch of annoying warnings for --as-needed
	(this problem was reported by Bob Proulx).  Also, try linking with
	-lm to detect a bug in binutils 2.16 (this problem was reported
	by Ralf Wildenhues).

2006-06-18  Jim Meyering  <jim@meyering.net>

	Test for a bug that causes glibc's getcwd to suffer a failed assertion.
	* getcwd-abort-bug.m4 (gl_FUNC_GETCWD_ABORT_BUG): New file and macro.
	* getcwd.m4 (gl_FUNC_GETCWD): If we detect support for getcwd_null,
	also check for glibc-2.4's abort-inducing bug.

	* getcwd-path-max.m4 (gl_FUNC_GETCWD_PATH_MAX): Fix typo.
	Low-probability clean-up should be to use rmdir to get rid of
	the just-created directory, not unlink.

	* ftruncate.m4 (gl_FUNC_FTRUNCATE): If ftruncate is missing, make
	configure fail, and request a bug report to inform us about it.
	Add a comment that, barring reports to the contrary, in 2007 we'll
	assume ftruncate is universally available.

2006-06-10  Jim Meyering  <jim@meyering.net>

	Apply this change from gnulib:

	2006-05-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	            Bruno Haible  <bruno@clisp.org>

	* strndup.m4 (gl_FUNC_STRNDUP): Replace the AC_REPLACE_FUNCS with a
	check for the declaration of strnlen and a run test that exposes the