@@ -1,5 +1,5 @@
-# savedir.m4 serial 4
-dnl Copyright (C) 2002, 2003, 2005 Free Software Foundation, Inc.
+# savedir.m4 serial 5
+dnl Copyright (C) 2002, 2003, 2005, 2006 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
 dnl with or without modifications, as long as this notice is preserved.
@@ -11,5 +11,4 @@ AC_DEFUN([gl_SAVEDIR],
 
   dnl Prerequisites of lib/savedir.c.
   AC_REQUIRE([AC_HEADER_DIRENT])
-  AC_REQUIRE([AC_FUNC_CLOSEDIR_VOID])
 ])
